--- a/content/_layouts/startup.hbs
+++ b/content/_layouts/startup.hbs
@@ -60,119 +60,119 @@
                 <div class="sidemenu__head"><span class="sidemenu__title">Alloy Navigation</span> <a href="#" class="sidemenu__close">&times;</a></div>
                 <nav class="sidemenu__body">
                     <ul class="sidemenu__list sidemenu__list--root">
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
 
                             <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
                             </ul>
 
                         </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
 
                             <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
                             </ul>
 
                         </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
 
                             <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
                             </ul>
 
                         </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
 
                             <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
                             </ul>
 
                         </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
 
                             <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
                             </ul>
 
                         </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
 
                             <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
                             </ul>
 
                         </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
 
                             <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
                             </ul>
 
                         </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
+                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
                     </ul>
 
                 </nav>
