--- a/assets/less/base_modules/sidemenu.less
+++ b/assets/less/base_modules/sidemenu.less
@@ -23,6 +23,28 @@
   }
   .sidemenu__close {
     float: right;
+    font-weight: bold;
+    text-decoration: none;
+    display: block;
+    line-height: 1;
+    ._padding-top (1);
+    ._font-size (@TYPE-LineHeight);
+
+    color: lighten(@COLOR-GreyDarkest, 20%);
+
+    &:link,
+    &:visited {
+      color: lighten(@COLOR-GreyDarkest, 20%);
+    }
+
+    &:hover,
+    &:focus {
+      color: lighten(@COLOR-GreyDarkest, 10%);
+    }
+
+    &:active {
+      color: lighten(@COLOR-GreyDarkest, 5%);
+    }
   }
   .sidemenu__body {
     overflow-y: auto;
