Modal, Toastrack, Scrollbar
Added image read functionality to modals.
Added infinite toasts to toastrack.
Added a scrollbar.

--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -246,6 +246,7 @@
 @MODULE-Panel:					true;
 @MODULE-Popover:				true;
 @MODULE-Print:                  true;
+@MODULE-Scrollbar:				true;
 @MODULE-Story:             		true;
 @MODULE-RTE:					true;
 @MODULE-Stage:                  true;
