--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -46,6 +46,7 @@
 @import "base_modules/pagination.less";
 @import "base_modules/panel.less";
 @import "base_modules/popover.less";
+@import "base_modules/scrollbar.less";
 @import "base_modules/section.less";
 @import "base_modules/stage.less";
 @import "base_modules/story.less";
