--- a/content/Alloy/Components/modals.hbs
+++ b/content/Alloy/Components/modals.hbs
@@ -46,6 +46,8 @@ js-modal: true
 
 				        <a href="#modal-use-this" class="button modal">Modal by Element Id</a>
 
+				        <a href="/assets/img/example-zindex.png" class="button modal">View an image</a>
+
 				        <div class="hidden">
 				        	<div class="g" id="modal-use-this">
 				        		<div class="c__lg--1">
