--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -184,6 +184,16 @@
 </script>
 {{/if}}
 
+{{#if js-scrollbar}}
+<script>
+	require(["scrollbar"], function() {
+		$(".scrollable").scrollbar({
+			
+		});
+	});
+</script>
+{{/if}}
+
 
 <!-- Example functionality -->
 <script>
