Startup menu and stage checkin

--- a/assets/less/base_modules/stage.less
+++ b/assets/less/base_modules/stage.less
@@ -59,7 +59,7 @@
     ._box-shadow-custom(~"0 0 40px rgba(0,0,0,0.9)");
   }
 
-  .stage__menu {
+  .stage__tray {
     z-index: @Z-INDEX-Level0;
     position: fixed;
     top:0;
