--- a/content/_layouts/startup.hbs
+++ b/content/_layouts/startup.hbs
@@ -49,12 +49,12 @@
 
     <div class="stage">
         <div class="stage__page">
-            <a class="stage__toggle" href="#menu"><i class="icon icon--menu55"></i><span class="hidden-text">Open Menu</span></a>
+            <a class="stage__toggle" acesskey="m" href="#menu" data-push="left"><i class="icon icon--menu55"></i><span class="hidden-text">Open Menu</span></a>
 
             {{> body }}
 
         </div>
-        <div id="menu" class="stage__menu">
+        <div id="menu" class="stage__tray">
 
             <div class="sidemenu">
                 <div class="sidemenu__head"><span class="sidemenu__title">Alloy Navigation</span> <a href="#" class="sidemenu__close">&times;</a></div>
