--- a/assets/less/base_modules/scrollbar.less
+++ b/assets/less/base_modules/scrollbar.less
@@ -1,35 +1,41 @@
 .scrollbar-styles() when not (@MODULE-Scrollbar) { }
 .scrollbar-styles() when (@MODULE-Scrollbar) {
 
+/* ==========================================================================
+// SCROLLBAR
+// =========================================================================*/
+
 	@SCROLLBAR-Anim:					@ANIM-Curve;
 
 	.scroll-wrap {
 		position: relative;
 
 		& .scrollable {
-			margin-right: 30px;
+			margin-right: 1em;
 		}
 
-		& .scrollcontainer {
-			background-color: purple;
+		.scrollcontainer {
+			background-color: @COLOR-GreyLightest;
+		  	background-color: fade(@COLOR-Grey, 50%);
 			position: absolute;
 			top: 0;
 			right: 0;
-			width: 30px;
-			height: 100%;	
+			width: 1em;
+			height: 100%;
+          ._padding(2);
 
 			opacity: 0;		
 		    ._transition (opacity, 0.4s, @SCROLLBAR-Anim);
 		}
 
 		&.hasfocus {
-	  		& .scrollcontainer {
+	  		 .scrollcontainer {
 	  			opacity: 1;
 	  		}
 	  	}
 
-  		&:hover {
-	  		& .scrollcontainer {
+  		&:hover, &:focus {
+	  		 .scrollcontainer {
 	  			opacity: 1;
 	  		}
 	  	}
@@ -49,9 +55,9 @@
 	}
 
 	.button-scroller {
-		width: 100%;
-		height: 10px;
-		background-color: red;
+	  width: 100%;
+	  height: 1em;
+	  background-color: @COLOR-GreyDark;
 	}
 
 } .scrollbar-styles();
