Scrollbar, stage, ink
Scrollbar fix.
Ink now lets ink happen before continuing event.
Stage can move trays in and out of it.

--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -194,6 +194,16 @@
 </script>
 {{/if}}
 
+{{#if js-scrollbar}}
+<script>
+	require(["stage"], function() {
+		$(".stage").stage({
+			
+		});
+	});
+</script>
+{{/if}}
+
 
 <!-- Example functionality -->
 <script>
