--- a/assets/less/base_modules/sidemenu.less
+++ b/assets/less/base_modules/sidemenu.less
@@ -14,6 +14,14 @@
 
   .sidemenu {
     ._padding(20);
+
+    .scroll-wrap {
+      position: absolute;
+      left: 20px;
+      right: 20px;
+      top: 60px;
+      bottom: 20px;
+    }
   }
   .sidemenu__head {
     position: relative;
@@ -47,12 +55,11 @@
     }
   }
   .sidemenu__body {
-    overflow-y: auto;
-    position: absolute;
-    left: 20px;
-    right: 20px;
-    top: 60px;
-    bottom: 20px;
+    //overflow-y: auto;
+    //left: 20px;
+    //right: 20px;
+    // top: 60px;
+    // bottom: 20px;
   }
   .sidemenu__list {
     border-top: 1px solid @COLOR-GreyDarker;}
