Access Keys, Cursors and Resizing
Added access key functionality to alloy.keyboard.js, and enum of
keycodes.
Added resize functionality to the stage and scrollbars. and made sure
that the pointer cursor is used when using the scrollbar.

--- a/content/_layouts/startup.hbs
+++ b/content/_layouts/startup.hbs
@@ -55,8 +55,8 @@ js-stage: true
     <div class="stage">
         <div class="stage__page">
             <a class="stage__toggle" accesskey="m" href="#menu"><i class="icon icon--menu55"></i><span class="hidden-text">Open Menu</span></a>
-            <a class="stage__toggle" accesskey="m" href="#anothermenu" style="left: 50px;"><i class="icon icon--menu55"></i><span class="hidden-text">Open Another Menu</span></a>
-            <a class="stage__toggle" accesskey="m" href="#thirdmenu" style="left: 80px;"><i class="icon icon--menu55"></i><span class="hidden-text">Open Third Menu</span></a>
+            <a class="stage__toggle" accesskey="n" href="#anothermenu" style="left: 50px;"><i class="icon icon--menu55"></i><span class="hidden-text">Open Another Menu</span></a>
+            <a class="stage__toggle" accesskey="b" href="#thirdmenu" style="left: 80px;"><i class="icon icon--menu55"></i><span class="hidden-text">Open Third Menu</span></a>
     
             {{> body }}
 
