--- a/assets/less/base_modules/scrollbar.less
+++ b/assets/less/base_modules/scrollbar.less
@@ -57,7 +57,7 @@
 	.button-scroller {
 	  width: 100%;
 	  height: 1em;
-	  background-color: @COLOR-GreyDark;
+	  background-color: red; //@COLOR-GreyDark;
 	}
 
 } .scrollbar-styles();
