reorganised stage trays

--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -135,6 +135,8 @@
 // ----------------------------------------------------
 
 @ANIM-Curve:					~"cubic-bezier(0.4, 0, 0.2, 1)";
+@ANIM-Exit:                     ~"cubic-bezier(0,0,0.6,1)";
+@ANIM-Entrance:                 ~"cubic-bezier(0.4,0,1,1)";
 
 // DEPTH
 // ----------------------------------------------------
