--- a/assets/less/base/helpers.less
+++ b/assets/less/base/helpers.less
@@ -32,6 +32,15 @@
     zoom: 1;
 }
 
+// TRUNCATION
+// ----------------------------------------------------
+
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 // TEXT MANIPULTAION
 // ----------------------------------------------------
 
