Added in boilerplate code

--- a/assets/less/base_modules/banner.less
+++ b/assets/less/base_modules/banner.less
@@ -72,7 +72,10 @@
 @media only screen and (max-width: @MQ-Small) {
 
     .banner {
-        ._margin-top (44);
+    }
+
+    .banner__content {
+        ._padding-top (44);
     }
 
     .banner__image {
