--- a/content/_layouts/startup.hbs
+++ b/content/_layouts/startup.hbs
@@ -4,44 +4,24 @@ js-stage: true
 ---
 
 <!doctype html>
-<!--[if IE 8]> <html class="no-js ie ie8 lt-ie8" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
-<!--[if IE 9]> <html class="no-js ie ie9" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
+<html class="no-js" lang="en" prefix="og: http://ogp.me/ns#">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <title>{{ page.title }} - {{ app.title }}</title>
 
-    <meta name="description" content="{{ page.description }}" />
-    <meta name="keywords" content="{{ page.title }}, {{ page.keywords }}, {{ app.keywords }} " />
-    <meta name="author" content="{{ app.author }}" />
+    {{> metatags }}
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{{ assets }}/css/fontloader.css" />
     <link rel="stylesheet" href="{{ assets }}/css/startup.css" />
 
-    <!-- For retina-display iPads -->
-    <!-- <link href="{{ assets }}/img/icons/retina_ipad_home.png" rel="apple-touch-icon-precomposed" sizes="144x144" type="image/png"/> -->
-    <!-- For retina-display iPhones -->
-    <!-- <link href="{{ assets }}/img/icons/iphone_home.png" rel="apple-touch-icon-precomposed" sizes="114x114" type="image/png"/> -->
-    <!-- For iPad 1 -->
-    <!-- <link href="{{ assets }}/img/icons/ipad_home.png" rel="apple-touch-icon-precomposed" sizes="72x72" type="image/png"/> -->
-    <!-- For iPhone 3G, iPod Touch and Android -->
-    <!-- <link href="{{ assets }}/img/icons/iphone_home.png" rel="apple-touch-icon-precomposed" type="image/png"/> -->
-    <!-- For Nokia -->
-    <!-- <link href="{{ assets }}/img/icons/iphone_home.png" rel="shortcut icon"/> -->
-    <!-- For everything else -->
-    <!-- <link href="{{ assets }}/img/icons/favicon.png" rel="shortcut icon" type="image/png"/> -->
-    <!-- <link href="{{ assets }}/img/icons/favicon.ico" rel="shortcut icon" type="image/x-icon"/> -->
-    
-    <script src="{{ assets }}/js/ALLOY.initial.js"></script>
-    <script src="{{ assets }}/js/app/conf.js"></script>
+    {{> metaicons }}
 
-    <!-- IE8 and below fallbacks -->
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <script type="text/javascript" src="{{ assets }}/js/libs/respond/respond.min.js"></script>
-    <![endif]-->
+    {{> metacard }}
+
+    {{> ALLOY_headscripts }}
 
 </head>
 
@@ -68,128 +48,7 @@ js-stage: true
         </div>
 
         <div id="menu" class="stage__tray" data-pushfrom="left">
-            <div class="sidemenu">
-                <div class="sidemenu__head"><span class="sidemenu__title">Alloy Navigation</span> <a href="#menu" class="sidemenu__close stage__close">&times;</a></div>
-                <nav class="sidemenu__body scrollable">
-                    <ul class="sidemenu__list sidemenu__list--root">
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
-
-                            <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                            </ul>
-
-                        </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
-
-                            <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                            </ul>
-
-                        </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
-
-                            <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                            </ul>
-
-                        </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
-
-                            <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                            </ul>
-
-                        </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
-
-                            <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                            </ul>
-
-                        </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
-
-                            <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                            </ul>
-
-                        </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li><li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a>
-
-                            <ul class="sidemenu__list sidemenu__list--sub">
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                                <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                            </ul>
-
-                        </li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                        <li class="sidemenu__item"><a href="#" class="sidemenu__link ink">Menu Item</a></li>
-                    </ul>
-
-                </nav>
-            </div>
-
+            {{> sidemenu }}
         </div>
         <div id="config" class="stage__tray" data-pushfrom="right">
             <div class="sidemenu">
