Added in boilerplate code

--- a/assets/less/base/helpers.less
+++ b/assets/less/base/helpers.less
@@ -56,10 +56,14 @@
     *display: inline;
 }
 
+/* TEXT is still read by screen readers */
 .hidden-text {
-    position: absolute;
+    position: absolute!important;
+    height: 1px;
+    width: 1px;
     overflow: hidden;
-    height: 0;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
 }
 
 .no-select {
