--- a/assets/less/base_modules/label.less
+++ b/assets/less/base_modules/label.less
@@ -24,7 +24,7 @@
 // LABEL BASE
 // ----------------------------------------------------
 
-span.label {
+.label {
     color: @LABEL-TextColor;
     background-color: @LABEL-BgColor;
     line-height:1;
