--- a/assets/less/startup.less
+++ b/assets/less/startup.less
@@ -36,7 +36,7 @@
 //@import "base_modules/label.less";
 @import "base_modules/links.less";
 @import "base_modules/list.less";
-@import "base_modules/list__navigation.less";
+@import "base_modules/mainnav.less";
 //@import "base_modules/map.less";
 @import "base_modules/media.less";
 @import "base_modules/menu.less";
