--- a/content/Alloy/Examples/index.hbs
+++ b/content/Alloy/Examples/index.hbs
@@ -47,7 +47,7 @@ page-category: "examples"
 <footer class="w w--foot">
 	<div class="g">
 	    <div class="c__lg--1">
-	    	[SITE COPYRIGHT]
+			{{> footer }} {{! footer uses the app.json for its information at present }}
 	    </div>
 	</div>
 </footer>
