--- a/assets/less/base_modules/mainnav.less
+++ b/assets/less/base_modules/mainnav.less
@@ -18,31 +18,35 @@
 // BASE
 // ----------------------------------------------------
 
-.list__nav {
+.mainnav {
 	font-family: @NAVIGATION-FontFamily;
     ._clearfix();
 
-    .list__item {
+}
 
-    }
+.mainnav__toggle {
 
-    .list__link {
-    	color: @NAVIGATION-Color;
-    	display: block;
-        text-decoration: none;
-        line-height: 1;
-        ._padding (@TYPE-LineHeight);
-        ._font-size (@TYPE-SIZE-Gamma);
-        ._transition (all, 0.1s);
+}
 
-        &:hover {
-        	color: @NAVIGATION-HoverColor;
-        	background-color: @NAVIGATION-HoverBgColor;
-        }
-    }
+.mainnav__item {
 
     .current {
-    	color: @NAVIGATION-HoverColor;
+        color: @NAVIGATION-HoverColor;
+        background-color: @NAVIGATION-HoverBgColor;
+    }
+}
+
+.mainnav__link {
+    color: @NAVIGATION-Color;
+    display: block;
+    text-decoration: none;
+    line-height: 1;
+    ._padding (@TYPE-LineHeight);
+    ._font-size (@TYPE-SIZE-Gamma);
+    ._transition (all, 0.1s);
+
+    &:hover {
+        color: @NAVIGATION-HoverColor;
         background-color: @NAVIGATION-HoverBgColor;
     }
 }
@@ -55,22 +59,24 @@
 
 @media only screen and (max-width: @MQ-Small) {
 
-    .list__nav {
-        .list__link {
-            text-align: center;
-            ._padding (@TYPE-LineHeight/2);
-        }
+    .mainnav {
+
+    }
+
+    .mainnav__link {
+        text-align: center;
+        ._padding (@TYPE-LineHeight/2);
     }
 
 }
 
-// TABLET
+// TABLET and UP
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) {
 
-    .list__nav {
-        .list__item {
+    .mainnav {
+        .mainnav__item {
             float: left;
         }
     }
@@ -82,7 +88,7 @@
 
 @media only screen and (min-width: @MQ-Large-min) {
 
-    .list__nav {
+    .mainnav {
         ._padding (0, @TYPE-LineHeight/2);
     }
 
