--- a/content/Alloy/Examples/Blog.hbs
+++ b/content/Alloy/Examples/Blog.hbs
@@ -45,7 +45,7 @@ page-category: "examples"
 	    	[SITE FOOTERNAV]
 	    </div>
 	    <div class="c__lg--1">
-	    	[SITE COPYRIGHT]
+			{{> footer }} {{! footer uses the app.json for its information at present }}
 	    </div>
 	</div>
 </footer>
