--- a/content/Alloy/Examples/holygrail.hbs
+++ b/content/Alloy/Examples/holygrail.hbs
@@ -82,13 +82,7 @@ page-category: "examples"
 	    	[SITE FOOTERNAV]
 	    </div>
 	    <div class="c__lg--1">
-	    	[SITE COPYRIGHT]
+			{{> footer }} {{! footer uses the app.json for its information at present }}
 	    </div>
 	</div>
 </footer>
-
-
-<div class="flash">[FLASH ALERT]</div>
-<div class="flyout">[FLYOUT]</div>
-<div class="modal">[MODAL]</div>
-<div class="mask">[MASK]</div>
