--- a/content/Alloy/Examples/system.hbs
+++ b/content/Alloy/Examples/system.hbs
@@ -46,7 +46,8 @@ page-category: "examples"
 <footer class="w w--foot">
 	<div class="g">
 	    <div class="c__lg--1">
-	    	[SITE COPYRIGHT] [SITELINK]
+			{{> footer }} {{! footer uses the app.json for its information at present }}
+			[SITELINK]
 	    </div>
 	</div>
 </footer>
