--- a/content/Alloy/Examples/wrap-split.hbs
+++ b/content/Alloy/Examples/wrap-split.hbs
@@ -51,7 +51,7 @@ page-category: "examples"
 <footer class="w w--foot">
 	<div class="g">
 	    <div class="c__lg--1">
-	    	FOOTER
+			{{> footer }} {{! footer uses the app.json for its information at present }}
 	    </div>
 	</div>
 </footer>
