--- a/content/_partials/ALLOY_list__nav--main.hbs
+++ b/content/_partials/ALLOY_list__nav--main.hbs
@@ -1,10 +1,10 @@
-<ul class="list list__nav list__nav--main">
+<ul class="mainnav mainnav--main">
 	{{#if navigation-main}}
 	    {{#withSort navigation-main "data.navigation-order"}}
 	    	{{#each this.pages}}
 		        {{#if data.navigation-main }}
 		            {{#this}}
-		            	<li class="list__item"><a class="list__link{{#if page.nav-variant}} list__link--{{data.nav-variant}}{{/if}}{{#is ../../../../page.dest this.dest}} current{{/is}}" href="{{relative ../../../../page.dest this.dest}}" title="{{data.nav-title}}"{{#if data.nav-target}} target="{{data.nav-target}}"{{/if}}>{{capitalizeFirst data.nav-text}}</a></li>
+		            	<li class="mainnav__item"><a class="mainnav__link{{#if page.nav-variant}} mainnav__link--{{data.nav-variant}}{{/if}}{{#is ../../../../page.dest this.dest}} current{{/is}}" href="{{relative ../../../../page.dest this.dest}}" title="{{data.nav-title}}"{{#if data.nav-target}} target="{{data.nav-target}}"{{/if}}>{{capitalizeFirst data.nav-text}}</a></li>
 		            {{/this}}
 		        {{/if}}
 	        {{/each}}
