--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -29,7 +29,7 @@
     <!-- <link href="{{ assets }}/img/icons/favicon.png" rel="shortcut icon" type="image/png"/> -->
     <!-- <link href="{{ assets }}/img/icons/favicon.ico" rel="shortcut icon" type="image/x-icon"/> -->
 
-    <script src="{{ assets }}/js/ALLOY.initial.js"></script>
+    <script src="{{ assets }}/js/alloy.initial.js"></script>
     <script src="{{ assets }}/js/app/conf.js"></script>
 
     <!-- IE8 and below fallbacks -->
